--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "black-and-white-ui",
   "theme": "ui",
   "version": "0.1.1",
-  "description": "A simple B&W UI theme based upon One Dark UI with a sprinkling of color throughout",
+  "description": "A minimal B&W UI theme based upon One Dark UI with a sprinkling of color throughout",
   "license": "MIT",
   "repository": "https://github.com/damassi/atom-black-and-white-ui",
   "engines": {
